test/files/neg/t7494-right-after-terminal/sample_2.scala
//> using options -Xplugin:. -Xplugin-require:rightafterterminal
package sample

// just a sample that is compiled with the sample plugin enabled
object Sample extends App {
}
